--- a/app/src/main/res/layout/activity_access_sensors.xml
+++ b/app/src/main/res/layout/activity_access_sensors.xml
@@ -30,5 +30,28 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textViewSensorActivityTitle"
         app:layout_constraintTop_toTopOf="parent" />
+     <TextView
+        android:id="@+id/textViewProximityTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:text="Proximity:"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLuminosity" />
 
+    <TextView
+        android:id="@+id/textViewProximity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="32dp"
+        android:text="(Proximity value)"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textViewProximityTitle"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLuminosity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
